<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/previewLeftLinearLayout"
        android:layout_width="250dp"
        android:layout_height="800dp"
        android:background="#6422FF"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/previewLeftUsernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_user_name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/previewLeftButtonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#440BCA"
            android:text="@string/preview_left_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/previewRightLinearLayout"
        android:layout_width="1028dp"
        android:layout_height="798dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/previewRightRadioRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/previewRightRadio1RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#6422FF"
                android:checked="true"
                android:contentDescription="To do"
                android:text="@string/preview_right_radio_1" />

            <RadioButton
                android:id="@+id/previewRightRadio2RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="Done"
                android:text="@string/preview_right_radio_2" />
        </RadioGroup>

        <TextView
            android:id="@+id/previewRightTextTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>